GitHub actions (#159)
* try to build multiple rust version

* setup rust

* setup rust

* setup rust

* setup rust

* setup rust

* use matrix for rust bersion on linux

* rust version default to stable

* try debug log for script

* include cross build

* adjust cross script

* fix android setup

* install dinghy

* run on gha directly

* search for android :/

* grmbl

* fail-fast false

* search for ndk-bundle

* oupse

* setup ndk pass for android

* run apt-get update

* fool around apt-get

*  make me a sandwich

* setup artefeact push to s3

* secretes with an s

* extract commit and ref name

* loose travis badge in crate

* update readme badges